--- a/quero-educacao.html
+++ b/quero-educacao.html
@@ -17,6 +17,10 @@
                     <div class="header__info__item">
                         <span><i class="fas fa-phone-volume"></i>0800 666 1010</span>
                     </div>
+                    <div class="header__info__mobile">
+                        <i class="far fa-question-circle"></i>
+                        <span><a href="#">Ajuda</a></span>
+                    </div>
                 </div>
                 <div class="header__logo">
                     <a href="#">
@@ -27,16 +31,21 @@
                     <div class="header__info__item">
                         <a href="#"><span>Entre ou crie sua conta<i class="far fa-user-circle"></i></span></a>
                     </div>
+                    <div class="header__info__mobile">
+                        <i class="far fa-question-circle"></i>
+                        <span><a href="#">Entrar</a></span>
+                    </div>
                 </div>
             </section>
             <nav class="menu">
-                <ul class="menu__itens">
+                <ul class="menu__itens" id="nav-menu">
                     <li class="menu__itens__title menu__itens__title--login"><a href="#">Minha conta</a></li>
                     <li class="menu__itens__title"><a href="#">Pré-matrículas</a></li>
                     <li class="menu__itens__title"><a href="#">Meus cursos</a></li>
                     <li class="menu__itens__title"><a href="#">Atualizar meus dados</a></li>
                     <li class="menu__itens__title"><a href="#">Contas e preferências</a></li>
                     <li class="menu__itens__title menu__itens__title--active"><a href="#">Quero bolsa indica</a></li>
+                    <li class="menu__itens__title menu__itens__icon"><a href="javascript:void(0);" onclick="showMenu()">Menu <i class="fas fa-angle-down"></i></i></a></li>
                 </ul>
 
             </nav>
@@ -228,6 +237,44 @@
                     </div>
                 </div>
             </section>
+            <section class="contacts-mobile">
+                <div class="contacts__block">
+                    <div class="contacts__item contact__item--first">
+                        <div class="contact__icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" class="contacts__icon"><path fill-rule="evenodd" d="M27.402 34.364c-1.026 0-2.025-.227-2.968-.674-.088-.04-.18-.074-.272-.098-9.3-4.745-17.004-12.45-21.75-21.75-.025-.096-.06-.19-.102-.282-.448-.945-.674-1.944-.674-2.97 0-3.967 3.474-6.954 5.726-6.954.294 0 .49.15.578.24.02.02.057.064.11.15.03.046.062.09.095.135L13.53 9.09c.042.054.087.103.136.152.09.09.24.284.24.578 0 .145-.04.282-.12.408l-1.823 1.81-.024.024c-.662.622-1.038 1.483-1.038 2.386 0 .845.328 1.65.898 2.255.02.033.042.065.064.096 2.01 2.78 4.48 5.24 7.344 7.318l.067.046c.605.58 1.415.914 2.265.914.854 0 1.678-.34 2.29-.943.03-.026.06-.054.09-.084l1.833-1.847c.128-.08.265-.122.41-.122.293 0 .488.15.577.24.048.048.1.093.152.135l6.926 5.387c.044.035.09.067.138.097.087.054.126.09.146.108.09.09.24.284.24.578 0 .056.002.11.008.166-.128 2.25-3.07 5.574-6.948 5.574zm8.575-5.74c0-.678-.275-1.292-.72-1.736-.13-.13-.277-.24-.435-.34l-6.925-5.387c-.445-.444-1.057-.72-1.735-.72-.555 0-1.06.194-1.47.505l-1.933 1.948-.006-.004c-.3.333-.73.548-1.214.548-.554 0-1.04-.276-1.337-.697-.01.017-.024.032-.035.05-2.673-1.94-5.04-4.276-6.978-6.953l.054-.04c-.426-.298-.706-.79-.706-1.35 0-.502.228-.945.58-1.247l-.002-.004 1.923-1.908c.31-.41.5-.914.5-1.47 0-.677-.274-1.29-.718-1.735L9.436 1.155C9.338 1 9.226.85 9.096.72 8.653.274 8.04 0 7.363 0 4.09 0 0 3.846 0 8.59c0 1.315.304 2.556.83 3.67l-.026.027c4.922 9.804 13.1 17.986 22.903 22.91l.027-.028c1.113.526 2.353.83 3.668.83 4.743 0 8.588-4.09 8.588-7.364v-.013h-.013zM19.64 9.817c3.615 0 6.544 2.93 6.544 6.546 0 .452.366.818.818.818.452 0 .818-.366.818-.818 0-4.518-3.662-8.182-8.18-8.182-.452 0-.817.366-.817.818 0 .452.365.818.818.818zm0-8.182c8.132 0 14.724 6.595 14.724 14.728 0 .452.366.818.818.818.452 0 .818-.366.818-.818C36 7.326 28.676 0 19.64 0c-.452 0-.817.367-.817.818 0 .453.365.818.818.818z"></path></svg>
+                        </div>
+                        <div class="contact__info">
+                            <h2 class="contact__info--nounderline">0800 666 1010</h2>
+                            <span><i class="fas fa-circle"></i> Seg - Sex das 9h às 23h</span>
+                        </div>
+                    </div>
+                    <div class="contacts__item">
+                        <div class="contact__icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="41" height="36" viewBox="0 0 41 36" class="contacts__icon"><path fill-rule="evenodd" d="M15.212 31.5c-1.066 0-2.168-.12-3.276-.362-.128-.03-.26-.042-.388-.042-.222 0-.445.04-.654.12l-4.75 1.81.754-2.62c.2-.694-.037-1.44-.603-1.893-2.457-1.97-3.81-4.584-3.81-7.363 0-5.707 5.71-10.35 12.727-10.35 7.018 0 12.727 4.643 12.727 10.35S22.23 31.5 15.21 31.5m0-22.5C7.18 9 .667 14.44.667 21.15c0 3.447 1.725 6.55 4.485 8.76L3.394 36l8.154-3.104c1.172.255 2.395.404 3.664.404 8.033 0 14.546-5.44 14.546-12.15S23.245 9 15.212 9m25.455 3.15C40.667 5.44 34.155 0 26.12 0c-6 0-11.148 3.036-13.37 7.37.717-.093 1.447-.15 2.19-.16C17.1 3.99 21.302 1.8 26.12 1.8c7.02 0 12.728 4.643 12.728 10.35 0 2.78-1.352 5.393-3.81 7.362-.566.454-.805 1.2-.604 1.894l.756 2.62-3.76-1.432c-.072.61-.21 1.202-.372 1.786l6.88 2.62-1.757-6.09c2.762-2.21 4.487-5.314 4.487-8.76"></path></svg>
+                        </div>
+                        <div class="contact__info">
+                            <h2><span><i class="fas fa-circle"></i></span>Chat</h2>
+                            
+                        </div>
+                    </div>
+                    <div class="contacts__item">
+                        <div class="contact__icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="37" height="27" viewBox="0 0 37 27" class="contacts__icon"><path fill-rule="evenodd" d="M34.697 22.837c0 .098-.013.19-.03.284L24.566 13.05 34.668 2.98c.016.092.03.185.03.282v19.575zM33.06 24.47H3.606c-.192 0-.374-.04-.545-.1L13.26 14.202l2.81 2.8c.625.625 1.445.937 2.265.937.82 0 1.64-.312 2.266-.936l2.808-2.8 10.2 10.165c-.174.06-.355.1-.548.1zM1.97 22.836V3.262c0-.097.012-.19.028-.283L12.1 13.05 2 23.12c-.016-.092-.03-.185-.03-.283zM3.605 1.63H33.06c.193 0 .374.04.546.102l-14.164 14.12c-.297.294-.69.457-1.11.457-.418 0-.81-.164-1.108-.46L3.06 1.733c.172-.062.354-.1.546-.1zM33.06 0H3.606C1.798 0 .333 1.46.333 3.262v19.575c0 1.802 1.465 3.263 3.273 3.263H33.06c1.808 0 3.273-1.46 3.273-3.263V3.262c0-1.8-1.465-3.262-3.273-3.262z"></path></svg>
+                        </div>
+                        <div class="contact__info">
+                            <h2><span><i class="fas fa-circle contact__info--available"></i></span>E-mail</h2>
+                        </div>
+                    </div>
+                    <div class="contacts__item">
+                        <div class="contact__icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" class="contacts__icon"><path fill-rule="evenodd" d="M18 34.364C8.962 34.364 1.636 27.038 1.636 18S8.962 1.636 18 1.636 34.364 8.962 34.364 18 27.038 34.364 18 34.364M18 0C8.06 0 0 8.06 0 18s8.06 18 18 18 18-8.06 18-18S27.94 0 18 0m1.79 8.993c-.635 0-1.18.206-1.634.617-.455.412-.682.907-.682 1.486 0 .58.227 1.072.682 1.48.454.407 1 .61 1.634.61.635 0 1.178-.203 1.63-.61.45-.408.675-.9.675-1.48s-.226-1.074-.676-1.486c-.452-.41-.995-.617-1.63-.617m.614 16.386c-.5 0-.854-.08-1.057-.24-.204-.162-.305-.462-.305-.904 0-.176.03-.434.094-.777.063-.343.134-.648.212-.915l.967-3.325c.095-.304.16-.64.194-1.005.035-.366.053-.62.053-.766 0-.702-.254-1.27-.76-1.71-.506-.438-1.226-.656-2.16-.656-.518 0-1.067.09-1.648.268-.58.18-1.19.395-1.825.646l-.258 1.028c.188-.068.414-.14.677-.217.262-.077.52-.115.77-.115.513 0 .858.084 1.04.25.18.17.27.466.27.893 0 .236-.03.497-.088.782-.06.285-.132.59-.218.908l-.972 3.337c-.085.35-.148.665-.188.943-.038.277-.058.55-.058.817 0 .685.26 1.25.782 1.697.52.445 1.252.667 2.192.667.612 0 1.15-.078 1.61-.235.464-.155 1.083-.383 1.86-.68l.258-1.028c-.133.06-.35.13-.646.212-.297.08-.563.12-.798.12"></path></svg>
+                        </div>
+                        <div class="contact__info">
+                            <h2><span><i class="fas fa-circle contact__info--available"></i></span>Ajuda</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="footer-info">
                 <div class="footer-info__links">
                     <div class="footer-info__item">
@@ -325,6 +372,23 @@
                     </div>
                 </div>
             </section>
+            <section class="footer-info-mobile">
+                    <div class="footer-info__links">
+                        <div class="footer-info__item">
+                            <span class="footer-info__title">
+                                <a href="#">Central de Ajuda |</a>
+                                <a href="#">Vs Educa Mais Brasil |</a>
+                                <a href="#">Vs Mais Estudo |</a>
+                                <a href="#">Mapa de Faculdades | </a>
+                                <a href="#">Mapa de Cursos |</a>
+                                <a href="#">Revista QB |</a>
+                                <a href="#">Guia de Programas do Governo |</a>
+                                <a href="#">Trabalhe Conosco |</a>
+                                <a href="#">Imprensa</a>
+                            </span>
+                        </div>
+                    </div>
+                </section>
             <section class="last-footer">
                 <div class="last-footer__item">
                     <div class="last-footer__info">
@@ -345,7 +409,43 @@
                     </div>
                 </div>
             </section>
+            <section class="last-footer-mobile">
+                <div class="last-footer__item">
+                    <div class="last-footer__img">
+                        <img class="highlights__imgs--safe" src="images/seguro.png" alt="Site seguro">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="24" viewBox="0 0 40 24"><g fill="none" fill-rule="evenodd"><rect width="40" height="24" fill="#FFF" rx="2.661"/><path fill="#005B9C" d="M17.984 16.71H15.55l1.52-9.346h2.435l-1.52 9.346m-4.48-9.346l-2.32 6.428-.276-1.385-.82-4.202s-.1-.84-1.155-.84H5.102l-.045.157s1.173.244 2.545 1.068l2.114 8.12h2.535l3.873-9.346h-2.618m16.46 6.04l1.28-3.498.718 3.498h-1.998zm2.677 3.306h2.235L32.93 7.364h-1.96c-.903 0-1.123.696-1.123.696l-3.63 8.65h2.536l.508-1.388h3.094l.285 1.388zm-6.232-7.1l.348-2.006s-1.072-.408-2.19-.408c-1.207 0-4.074.53-4.074 3.095 0 2.416 3.366 2.446 3.366 3.714 0 1.268-3.02 1.04-4.015.242l-.362 2.098s1.086.528 2.747.528c1.66 0 4.165-.86 4.165-3.2 0-2.43-3.395-2.655-3.395-3.712 0-1.056 2.37-.92 3.41-.347"/><path fill="#EFA03F" d="M10.91 12.408l-.82-4.202s-.098-.842-1.154-.842H5.102l-.045.158s1.843.382 3.61 1.813c1.69 1.368 2.243 3.073 2.243 3.073"/></g></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="46" height="28" viewBox="0 0 46 28"><g fill="none" fill-rule="evenodd" transform="translate(.68)"><rect width="44.396" height="28" fill="#FFF" rx="3.168"/><path d="M5 0h35.692v29H5z"/><g fill-rule="nonzero"><path fill="#FF5F00" d="M19.5 7.808h7.808v13.385H19.5z"/><path fill="#EB001B" d="M19.423 14.5c-.003-2.737 1.26-5.325 3.423-7.016-3.675-2.875-8.95-2.456-12.122.962-3.17 3.42-3.17 8.69 0 12.108 3.17 3.418 8.447 3.837 12.122.962-2.163-1.69-3.425-4.277-3.423-7.015z"/><path fill="#F79E1B" d="M37.346 14.5c0 3.417-1.96 6.533-5.045 8.026-3.085 1.493-6.757 1.1-9.454-1.01 2.162-1.693 3.424-4.278 3.424-7.016 0-2.737-1.262-5.323-3.424-7.015 2.697-2.11 6.37-2.504 9.455-1.01 3.087 1.492 5.046 4.608 5.046 8.024zm.172 5.898v-.266h.112v-.055h-.284v.055h.122v.266h.05zm.55 0v-.32h-.086l-.1.228-.1-.23h-.076v.322h.062v-.24l.093.208h.065l.093-.21v.244l.05-.002z"/></g></g></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="26" viewBox="0 0 40 26" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path id="a" d="M0 5.997h33.955V0H0z"/></defs><g fill="none" fill-rule="evenodd"><rect width="40" height="26" fill="#FFF" rx="2.661"/><g transform="translate(3 10)"><mask id="b" fill="#fff"><use xlink:href="#a"/></mask><path fill="#067AA6" d="M33.955 0h-2.427L29.89 1.93 28.25 0h-2.426l2.602 2.936-2.602 3.06h2.355l1.71-2.012 1.71 2.013h2.354l-2.6-3.06L33.954 0zM18.793 5.997h6.126v-1.45H20.54v-.823h4.177V2.28H20.54v-.83h4.376V0H18.79v5.997zm-5.115-2.625c-.046.11-.062.72-.13.72-.07 0-.086-.61-.132-.72L11.966 0H8.92v5.997h1.697V1.795c0-.176-.077-.36-.077-.46 0-.043.008-.068.046-.068.054 0 .116.184.154.276l2.113 4.454h1.388L16.2 1.56c.038-.092.1-.277.153-.277.03 0 .047.017.047.05 0 .126-.077.294-.077.48v4.184h1.696V0h-2.893l-1.45 3.372zm-10.44.075l.94-2.105h.277l.94 2.105H3.237zM2.824 0L0 5.997h2.044L2.586 5h3.468l.54.997H8.64L5.806 0H2.824z" mask="url(#b)"/></g></g></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="26" viewBox="0 0 40 26"><g fill="none" fill-rule="evenodd"><rect width="40" height="26" fill="#FFF" rx="2.661"/><path d="M15.028 12.216l-4.903 2.113c-.008-.086-.012-.17-.012-.258 0-1.55 1.258-2.808 2.808-2.808.84 0 1.595.368 2.11.95zm-2.107-3.05c2.316 0 4.255 1.6 4.774 3.754l-1.978.865v-.004l-2.024.89-4.854 2.124c-.52-.78-.823-1.714-.823-2.72 0-2.71 2.198-4.908 4.908-4.908zm3.43 8.418c-1.756 1.668-4.08 1.832-6.124.59l1.154-1.753c1.163.696 2.33.584 3.504-.337l1.467 1.502m2-1.215l-.013-9.283h1.76v9.03c0 .088.01.164.123.208l1.53.595-.69 1.792-1.79-.758c-.68-.287-.92-.704-.92-1.585m6.62-.157C24.313 15.7 23.888 14.9 23.888 14c0-.8.336-1.52.874-2.03l-1.135-1.84c-1.142.904-1.875 2.3-1.875 3.87 0 1.693.85 3.185 2.148 4.075l1.073-1.862m.767-4.85c.297-.105.616-.163.95-.163 1.198 0 2.22.754 2.62 1.813l2.177-.18c-.526-2.164-2.474-3.77-4.798-3.77-.66 0-1.285.13-1.86.36l.91 1.94m.95 5.44c-.237 0-.465-.03-.683-.085l-.854 1.977c.483.158 1 .244 1.536.244 2.657 0 4.824-2.104 4.93-4.737l-2.135-.067c-.07 1.484-1.296 2.665-2.797 2.665z" fill="#000"/></g></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="24" viewBox="0 0 40 24"><g fill="none" fill-rule="evenodd"><rect width="40" height="24" fill="#FFF" rx="2.661"/><g fill="#000"><text font-family="ProximaNova-Bold, Proxima Nova" font-size="7.096" font-weight="bold" letter-spacing="-.284" transform="translate(6 2)"><tspan x="1.437" y="17.416">BOLET</tspan> <tspan x="21.959" y="17.416" letter-spacing="-.227">O</tspan></text><path d="M7.164 3.074h.89V13.69h-.89zm1.776 0h.89V13.69h-.89zm1.778 0h.89V13.69h-.89z"/><path d="M11.607 3.074h.89V13.69h-.89zm2.666 0h.89V13.69h-.89zm2.665 0h.89V13.69h-.89zm1.777 0h.89V13.69h-.89z"/><path d="M19.604 3.074h.89V13.69h-.89zm2.666 0h.89V13.69h-.89zm1.777 0h.89V13.69h-.89zm1.777 0h.89V13.69h-.89zm1.776 0h.89V13.69h-.89z"/><path d="M28.49 3.074h.89V13.69h-.89zm2.665 0h.89V13.69h-.89zm1.778 0h.89V13.69h-.89z"/></g></g></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="24" viewBox="0 0 40 24"><g fill="none" fill-rule="evenodd"><rect width="40" height="24" fill="#FFF" rx="2.661"/><path fill="#006095" d="M21.672 19.88c4.314.02 8.252-3.518 8.252-7.823 0-4.707-3.938-7.96-8.252-7.96H17.96c-4.367 0-7.96 3.254-7.96 7.96 0 4.306 3.593 7.844 7.96 7.823h3.712"/><path fill="#FFF" d="M19.615 16.25V7.7c1.718.66 2.938 2.324 2.94 4.275-.002 1.95-1.222 3.614-2.94 4.274m-6.217-4.276c.004-1.95 1.222-3.612 2.94-4.273v8.546c-1.718-.66-2.936-2.322-2.94-4.272m4.58-7.225c-3.99 0-7.223 3.234-7.224 7.224 0 3.99 3.233 7.222 7.223 7.223 3.99 0 7.223-3.234 7.224-7.223 0-3.99-3.232-7.223-7.222-7.225"/></g></svg>
+                    </div>
+                    <div class="last-footer-mobile-img">
+                        <a href="#"><img class="highlights__imgs--youtube" src="images/youtube.png" alt="Youtbe"></a>
+                        <a href="#"><img class="highlights__imgs--instagram" src="images/instagram.png" alt="Instagram"></a>
+                        <a href="#"><img class="highlights__imgs--facebook" src="images/facebook.png" alt="Facebook"></a>
+                    </div>
+                    <div class="last-footer__madeby">
+                        <span>Feito com &#10084; por Ana Guatura</span>
+                    </div>
+                    <div class="last-footer__info">
+                        <span>RedeAlumni &copy; 2011-2016</span>
+                        <span>CNPJ: 10.542.212/0001-54</span>
+                    </div>
+                </div>
+            </section>
         </footer>
 
+        <script>
+            function showMenu() {
+                var x = document.getElementById("nav-menu");
+                if (x.className === "menu__itens") {
+                    x.className += " responsive";
+                } else {
+                    x.className = "menu__itens";
+                }
+            }
+        </script>
    </body>
 </html>
+
