Alterações do mobile

--- a/quero-educacao.html
+++ b/quero-educacao.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
    <head>
        <meta charset="utf-8"/>
+       <meta name="viewport" content="width=device-width, initial-scale=1">
        <title>Quero Bolsa | Encontre aqui sua bolsa de estudos</title>
        <link rel="stylesheet" type="text/css" href="css/quero-educacao.css" media="screen">
        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -14,6 +15,7 @@
                     <div class="header__info__item">
                         <a href="#"><span><i class="fas fa-info-circle"></i>Como funciona</span></a>
                     </div>
+                    <span class="header__separator"></span>
                     <div class="header__info__item">
                         <span><i class="fas fa-phone-volume"></i>0800 666 1010</span>
                     </div>
@@ -375,17 +377,16 @@
             <section class="footer-info-mobile">
                     <div class="footer-info__links">
                         <div class="footer-info__item">
-                            <span class="footer-info__title">
-                                <a href="#">Central de Ajuda |</a>
-                                <a href="#">Vs Educa Mais Brasil |</a>
-                                <a href="#">Vs Mais Estudo |</a>
-                                <a href="#">Mapa de Faculdades | </a>
-                                <a href="#">Mapa de Cursos |</a>
-                                <a href="#">Revista QB |</a>
-                                <a href="#">Guia de Programas do Governo |</a>
-                                <a href="#">Trabalhe Conosco |</a>
-                                <a href="#">Imprensa</a>
-                            </span>
+                            <ul class="footer-info__title">
+                            <li><a href="#">Central de Ajuda |</a></li>
+                            <li><a href="#">Vs Educa Mais Brasil |</a></li>
+                            <li><a href="#">Vs Mais Estudo |</a></li>
+                            <li><a href="#">Mapa de Faculdades | </a></li>
+                            <li><a href="#">Mapa de Cursos |</a></li>
+                            <li><a href="#">Revista QB |</a></li>
+                            <li><a href="#">Guia de Programas do Governo |</a></li>
+                            <li><a href="#">Trabalhe Conosco |</a></li>
+                            <li><a href="#">Imprensa</a></li>
                         </div>
                     </div>
                 </section>
@@ -405,7 +406,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="24" viewBox="0 0 40 24"><g fill="none" fill-rule="evenodd"><rect width="40" height="24" fill="#FFF" rx="2.661"/><path fill="#006095" d="M21.672 19.88c4.314.02 8.252-3.518 8.252-7.823 0-4.707-3.938-7.96-8.252-7.96H17.96c-4.367 0-7.96 3.254-7.96 7.96 0 4.306 3.593 7.844 7.96 7.823h3.712"/><path fill="#FFF" d="M19.615 16.25V7.7c1.718.66 2.938 2.324 2.94 4.275-.002 1.95-1.222 3.614-2.94 4.274m-6.217-4.276c.004-1.95 1.222-3.612 2.94-4.273v8.546c-1.718-.66-2.936-2.322-2.94-4.272m4.58-7.225c-3.99 0-7.223 3.234-7.224 7.224 0 3.99 3.233 7.222 7.223 7.223 3.99 0 7.223-3.234 7.224-7.223 0-3.99-3.232-7.223-7.222-7.225"/></g></svg>
                     </div>
                     <div class="last-footer__madeby">
-                        <span>Feito com &#10084; por Ana Guatura</span>
+                        <span>Feito com &#10084; por Ana Guatura para Quero Educação</span>
                     </div>
                 </div>
             </section>
@@ -418,7 +419,6 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="26" viewBox="0 0 40 26" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path id="a" d="M0 5.997h33.955V0H0z"/></defs><g fill="none" fill-rule="evenodd"><rect width="40" height="26" fill="#FFF" rx="2.661"/><g transform="translate(3 10)"><mask id="b" fill="#fff"><use xlink:href="#a"/></mask><path fill="#067AA6" d="M33.955 0h-2.427L29.89 1.93 28.25 0h-2.426l2.602 2.936-2.602 3.06h2.355l1.71-2.012 1.71 2.013h2.354l-2.6-3.06L33.954 0zM18.793 5.997h6.126v-1.45H20.54v-.823h4.177V2.28H20.54v-.83h4.376V0H18.79v5.997zm-5.115-2.625c-.046.11-.062.72-.13.72-.07 0-.086-.61-.132-.72L11.966 0H8.92v5.997h1.697V1.795c0-.176-.077-.36-.077-.46 0-.043.008-.068.046-.068.054 0 .116.184.154.276l2.113 4.454h1.388L16.2 1.56c.038-.092.1-.277.153-.277.03 0 .047.017.047.05 0 .126-.077.294-.077.48v4.184h1.696V0h-2.893l-1.45 3.372zm-10.44.075l.94-2.105h.277l.94 2.105H3.237zM2.824 0L0 5.997h2.044L2.586 5h3.468l.54.997H8.64L5.806 0H2.824z" mask="url(#b)"/></g></g></svg>
                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="26" viewBox="0 0 40 26"><g fill="none" fill-rule="evenodd"><rect width="40" height="26" fill="#FFF" rx="2.661"/><path d="M15.028 12.216l-4.903 2.113c-.008-.086-.012-.17-.012-.258 0-1.55 1.258-2.808 2.808-2.808.84 0 1.595.368 2.11.95zm-2.107-3.05c2.316 0 4.255 1.6 4.774 3.754l-1.978.865v-.004l-2.024.89-4.854 2.124c-.52-.78-.823-1.714-.823-2.72 0-2.71 2.198-4.908 4.908-4.908zm3.43 8.418c-1.756 1.668-4.08 1.832-6.124.59l1.154-1.753c1.163.696 2.33.584 3.504-.337l1.467 1.502m2-1.215l-.013-9.283h1.76v9.03c0 .088.01.164.123.208l1.53.595-.69 1.792-1.79-.758c-.68-.287-.92-.704-.92-1.585m6.62-.157C24.313 15.7 23.888 14.9 23.888 14c0-.8.336-1.52.874-2.03l-1.135-1.84c-1.142.904-1.875 2.3-1.875 3.87 0 1.693.85 3.185 2.148 4.075l1.073-1.862m.767-4.85c.297-.105.616-.163.95-.163 1.198 0 2.22.754 2.62 1.813l2.177-.18c-.526-2.164-2.474-3.77-4.798-3.77-.66 0-1.285.13-1.86.36l.91 1.94m.95 5.44c-.237 0-.465-.03-.683-.085l-.854 1.977c.483.158 1 .244 1.536.244 2.657 0 4.824-2.104 4.93-4.737l-2.135-.067c-.07 1.484-1.296 2.665-2.797 2.665z" fill="#000"/></g></svg>
                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="24" viewBox="0 0 40 24"><g fill="none" fill-rule="evenodd"><rect width="40" height="24" fill="#FFF" rx="2.661"/><g fill="#000"><text font-family="ProximaNova-Bold, Proxima Nova" font-size="7.096" font-weight="bold" letter-spacing="-.284" transform="translate(6 2)"><tspan x="1.437" y="17.416">BOLET</tspan> <tspan x="21.959" y="17.416" letter-spacing="-.227">O</tspan></text><path d="M7.164 3.074h.89V13.69h-.89zm1.776 0h.89V13.69h-.89zm1.778 0h.89V13.69h-.89z"/><path d="M11.607 3.074h.89V13.69h-.89zm2.666 0h.89V13.69h-.89zm2.665 0h.89V13.69h-.89zm1.777 0h.89V13.69h-.89z"/><path d="M19.604 3.074h.89V13.69h-.89zm2.666 0h.89V13.69h-.89zm1.777 0h.89V13.69h-.89zm1.777 0h.89V13.69h-.89zm1.776 0h.89V13.69h-.89z"/><path d="M28.49 3.074h.89V13.69h-.89zm2.665 0h.89V13.69h-.89zm1.778 0h.89V13.69h-.89z"/></g></g></svg>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="24" viewBox="0 0 40 24"><g fill="none" fill-rule="evenodd"><rect width="40" height="24" fill="#FFF" rx="2.661"/><path fill="#006095" d="M21.672 19.88c4.314.02 8.252-3.518 8.252-7.823 0-4.707-3.938-7.96-8.252-7.96H17.96c-4.367 0-7.96 3.254-7.96 7.96 0 4.306 3.593 7.844 7.96 7.823h3.712"/><path fill="#FFF" d="M19.615 16.25V7.7c1.718.66 2.938 2.324 2.94 4.275-.002 1.95-1.222 3.614-2.94 4.274m-6.217-4.276c.004-1.95 1.222-3.612 2.94-4.273v8.546c-1.718-.66-2.936-2.322-2.94-4.272m4.58-7.225c-3.99 0-7.223 3.234-7.224 7.224 0 3.99 3.233 7.222 7.223 7.223 3.99 0 7.223-3.234 7.224-7.223 0-3.99-3.232-7.223-7.222-7.225"/></g></svg>
                     </div>
                     <div class="last-footer-mobile-img">
                         <a href="#"><img class="highlights__imgs--youtube" src="images/youtube.png" alt="Youtbe"></a>
@@ -426,10 +426,10 @@
                         <a href="#"><img class="highlights__imgs--facebook" src="images/facebook.png" alt="Facebook"></a>
                     </div>
                     <div class="last-footer__madeby">
-                        <span>Feito com &#10084; por Ana Guatura</span>
+                        <span>Feito com &#10084; por Ana Guatura para Quero Educação</span>
                     </div>
                     <div class="last-footer__info">
-                        <span>RedeAlumni &copy; 2011-2016</span>
+                        <span>RedeAlumni Servços de Internet Ltda &copy; 2011-2016</span>
                         <span>CNPJ: 10.542.212/0001-54</span>
                     </div>
                 </div>
