Testes nos navegadores e adaptações no CSS

--- a/quero-educacao.html
+++ b/quero-educacao.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
    <head>
-       <meta charset="utf-8"/>
+       <meta charset="utf-8"S/>
        <meta name="viewport" content="width=device-width, initial-scale=1">
+
        <title>Quero Bolsa | Encontre aqui sua bolsa de estudos</title>
+
        <link rel="stylesheet" type="text/css" href="css/quero-educacao.css" media="screen">
        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
+       <script type="text/javascript" src="js/action.js"></script>
     </head>
    <body>
        <header>
@@ -47,9 +52,8 @@
                     <li class="menu__title"><a href="#">Atualizar meus dados</a></li>
                     <li class="menu__title"><a href="#">Contas e preferências</a></li>
                     <li class="menu__title menu__title--active"><a href="#">Quero bolsa indica</a></li>
-                    <li class="menu__title menu__icon"><a href="javascript:void(0);" onclick="showMenu()">Menu <i class="fas fa-angle-down"></i></i></a></li>
+                    <li class="menu__title menu__icon"><a href="javascript:void(0);" onclick="showMenu()">Menu <i class="fas fa-angle-down"></i></a></li>
                 </ul>
-
             </nav>
         </header>
         <main>
@@ -94,6 +98,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="container__item container__item--box">
                         <div class="container__form">
                             <div class="container__text">
@@ -381,15 +386,16 @@
                     <div class="footer-info__links">
                         <div class="footer-info__item">
                             <ul class="footer-info__title">
-                            <li><a href="#">Central de Ajuda |</a></li>
-                            <li><a href="#">Vs Educa Mais Brasil |</a></li>
-                            <li><a href="#">Vs Mais Estudo |</a></li>
-                            <li><a href="#">Mapa de Faculdades | </a></li>
-                            <li><a href="#">Mapa de Cursos |</a></li>
-                            <li><a href="#">Revista QB |</a></li>
-                            <li><a href="#">Guia de Programas do Governo |</a></li>
-                            <li><a href="#">Trabalhe Conosco |</a></li>
-                            <li><a href="#">Imprensa</a></li>
+                                <li><a href="#">Central de Ajuda |</a></li>
+                                <li><a href="#">Vs Educa Mais Brasil |</a></li>
+                                <li><a href="#">Vs Mais Estudo |</a></li>
+                                <li><a href="#">Mapa de Faculdades | </a></li>
+                                <li><a href="#">Mapa de Cursos |</a></li>
+                                <li><a href="#">Revista QB |</a></li>
+                                <li><a href="#">Guia de Programas do Governo |</a></li>
+                                <li><a href="#">Trabalhe Conosco |</a></li>
+                                <li><a href="#">Imprensa</a></li>
+                            </ul>
                         </div>
                     </div>
                 </section>
@@ -409,7 +415,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="24" viewBox="0 0 40 24"><g fill="none" fill-rule="evenodd"><rect width="40" height="24" fill="#FFF" rx="2.661"/><path fill="#006095" d="M21.672 19.88c4.314.02 8.252-3.518 8.252-7.823 0-4.707-3.938-7.96-8.252-7.96H17.96c-4.367 0-7.96 3.254-7.96 7.96 0 4.306 3.593 7.844 7.96 7.823h3.712"/><path fill="#FFF" d="M19.615 16.25V7.7c1.718.66 2.938 2.324 2.94 4.275-.002 1.95-1.222 3.614-2.94 4.274m-6.217-4.276c.004-1.95 1.222-3.612 2.94-4.273v8.546c-1.718-.66-2.936-2.322-2.94-4.272m4.58-7.225c-3.99 0-7.223 3.234-7.224 7.224 0 3.99 3.233 7.222 7.223 7.223 3.99 0 7.223-3.234 7.224-7.223 0-3.99-3.232-7.223-7.222-7.225"/></g></svg>
                     </div>
                     <div class="last-footer__madeby">
-                        <span>Feito com &#10084; por Ana Guatura para Quero Educação</span>
+                        <span>Feito com &#10084; por Ana Guatura</span>
                     </div>
                 </div>
             </section>
@@ -429,7 +435,7 @@
                         <a href="#"><img class="highlights__imgs--facebook" src="images/facebook.png" alt="Facebook"></a>
                     </div>
                     <div class="last-footer__madeby">
-                        <span>Feito com &#10084; por Ana Guatura para Quero Educação</span>
+                        <span>Feito com &#10084; por Ana Guatura</span>
                     </div>
                     <div class="last-footer__info">
                         <span>RedeAlumni Servços de Internet Ltda &copy; 2011-2016</span>
@@ -438,17 +444,6 @@
                 </div>
             </section>
         </footer>
-
-        <script>
-            function showMenu() {
-                var element = document.getElementById("nav-menu");
-                if (element.className === "menu__itens") {
-                    element.className += " responsive";
-                } else {
-                    element.className = "menu__itens";
-                }
-            }
-        </script>
    </body>
 </html>
 
